@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.451 2012-01-01 20:51:53 zender Exp $ -*-text-*-
+$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.452 2012-02-13 21:27:21 zender Exp $ -*-text-*-
 
 The netCDF operators NCO version 4.0.9 are ready. 
 
@@ -27,6 +27,12 @@ Enjoy,
 Charlie
 
 Other "New stuff" in 4.0.9 summary (full details always in ChangeLog):
+
+A. ncap2 array() function now works on multi-dimensional arrays.
+   Pass array() a template the same shape as the desired output:
+   var_out=array(1,2,three_dmn_rec_var); // 1,3,5,...155,157,159
+
+A. Fix ncap2 print() function
 
 A. Warn when number of attributes exceeds NC_MAX_ATTRS
 
