@@ -5,7 +5,7 @@
 
 @ignore
 
-$Header: /data/zender/nco_20150216/nco/doc/nco.texi,v 1.658 2012-02-09 21:02:46 zender Exp $
+$Header: /data/zender/nco_20150216/nco/doc/nco.texi,v 1.659 2012-02-13 21:27:21 zender Exp $
 
 Purpose: TeXInfo documentation for NCO suite
 
@@ -6411,17 +6411,23 @@ Generating a regularly spaced one-dimensional array with @command{ncap2}
 is simple with the @code{array()} function. 
 The syntax is 
 @example
-output=array(srt_val,ncr_val,$dmn_nm)
-@end example
+output=array(val_srt,val_ncr,$dmn_nm); // One-dimensional output
+output=array(val_srt,val_ncr,var_tpl);  // Multi-dimensional output
+h@end example
 @noindent
-where the starting value @var{val_srt}, incremental value @var{val_ncr},
-and dimension @code{$dmn_nm}.
+where the arguments are the starting value @var{val_srt}, 
+incremental value @var{val_ncr}, and, for one-dimensional output, the
+single dimension @code{$dmn_nm}, or, for multi-dimensional output, a
+template variable @code{var_tpl}, i.e., a variable with the same shape
+as the desired output. 
+
 Once the associated dimensions have been defined, the start and
 increment arguments may be supplied as values, mathmatical expressions,
 or variables:
 @example
 var_out=array(1,1,$time); // 1,2,3,4,5,6,7,8,9,10
 var_out=array(1+2-2,one,$time); // 1,2,3,4,5,6,7,8,9,10
+var_out=array(1,2,three_dmn_rec_var); // 1,3,5,...155,157,159
 @end example
 
 @cindex hyperslabs
